--- a/OpenGL_Demo.vcxproj
+++ b/OpenGL_Demo.vcxproj
@@ -133,6 +133,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\IndexBuffer.cpp" />
     <ClCompile Include="src\GLError.cpp" />
@@ -148,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="inc\IndexBuffer.h" />
     <ClInclude Include="inc\GLError.h" />
+    <ClInclude Include="inc\Renderer.h" />
     <ClInclude Include="inc\Shader.h" />
     <ClInclude Include="inc\VertexArray.h" />
     <ClInclude Include="inc\VertexBuffer.h" />
