--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=531,109
+Pos=562,87
 Size=167,400
 
 [Window][Dear ImGui Demo]
@@ -13,4 +13,8 @@ Size=388,183
 [Window][Another Window]
 Pos=60,60
 Size=198,71
+
+[Window][Test]
+Pos=228,211
+Size=358,167
 
