--- a/OpenGL-Core/OpenGL-Core.vcxproj
+++ b/OpenGL-Core/OpenGL-Core.vcxproj
@@ -73,6 +73,10 @@
     <Lib>
       <AdditionalDependencies>opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
+    <PostBuildEvent>
+      <Command>
+      </Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -130,6 +134,9 @@
     <ClInclude Include="src\GLCore\Util\GLAbstract\VertexBuffer.h" />
     <ClInclude Include="src\GLCore\Util\GLAbstract\VertexBufferLayout.h" />
     <ClInclude Include="src\GLCoreUtils.h" />
+    <ClInclude Include="src\GLCore\Util\Model\Mesh.h" />
+    <ClInclude Include="src\GLCore\Util\Model\Model.h" />
+    <ClInclude Include="src\GLCore\Util\Model\ObjLoader.h" />
     <ClInclude Include="src\GLCore\Util\OpenGLDebug.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
@@ -523,6 +530,8 @@
     <ClCompile Include="src\GLCore\Util\GLAbstract\Texture.cpp" />
     <ClCompile Include="src\GLCore\Util\GLAbstract\VertexArray.cpp" />
     <ClCompile Include="src\GLCore\Util\GLAbstract\VertexBuffer.cpp" />
+    <ClCompile Include="src\GLCore\Util\Model\Mesh.cpp" />
+    <ClCompile Include="src\GLCore\Util\Model\Model.cpp" />
     <ClCompile Include="src\GLCore\Util\OpenGLDebug.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
