--- a/OpenGL-Core/OpenGL-Core.vcxproj.filters
+++ b/OpenGL-Core/OpenGL-Core.vcxproj.filters
@@ -55,6 +55,9 @@
     <Filter Include="src\GLCore\Util\Camera">
       <UniqueIdentifier>{ee67c03b-866c-4791-a8f0-caaf0ff04e90}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\GLCore\Util\Model">
+      <UniqueIdentifier>{a8a0bcd4-72ec-4374-89d4-87d50002076b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\GLCore.h">
@@ -1264,6 +1267,9 @@
       <Filter>src\GLCore\Util\GLAbstract</Filter>
     </ClInclude>
     <ClInclude Include="src\GLCore\Util\OpenGLDebug.h" />
+    <ClInclude Include="src\GLCore\Util\Model\Mesh.h" />
+    <ClInclude Include="src\GLCore\Util\Model\Model.h" />
+    <ClInclude Include="src\GLCore\Util\Model\ObjLoader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\GLCore\Core\Application.cpp">
@@ -1333,5 +1339,7 @@
       <Filter>src\GLCore\Util\GLAbstract</Filter>
     </ClCompile>
     <ClCompile Include="src\GLCore\Util\OpenGLDebug.cpp" />
+    <ClCompile Include="src\GLCore\Util\Model\Mesh.cpp" />
+    <ClCompile Include="src\GLCore\Util\Model\Model.cpp" />
   </ItemGroup>
 </Project>
