--- a/OpenGL-Core/OpenGL-Core.vcxproj.filters
+++ b/OpenGL-Core/OpenGL-Core.vcxproj.filters
@@ -1341,5 +1341,6 @@
     <ClCompile Include="src\GLCore\Util\OpenGLDebug.cpp" />
     <ClCompile Include="src\GLCore\Util\Model\Mesh.cpp" />
     <ClCompile Include="src\GLCore\Util\Model\Model.cpp" />
+    <ClCompile Include="src\GLCore\Util\Model\ObjLoader.cpp" />
   </ItemGroup>
 </Project>
