--- a/OpenGL-Core/OpenGL-Core.vcxproj
+++ b/OpenGL-Core/OpenGL-Core.vcxproj
@@ -58,7 +58,7 @@
       <PrecompiledHeaderFile>glpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;GLCORE_PLATFORM_WINDOWS;GLFW_INCLUDE_NONE;GLCORE_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\assimp\include;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\assimp\include;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <MinimalRebuild>false</MinimalRebuild>
@@ -126,6 +126,7 @@
     <ClInclude Include="src\GLCore\Util\Camera\OrthographicCameraController.h" />
     <ClInclude Include="src\GLCore\Util\Camera\PerspectiveCamera.h" />
     <ClInclude Include="src\GLCore\Util\Camera\PerspectiveCameraController.h" />
+    <ClInclude Include="src\GLCore\Util\Common\File.hpp" />
     <ClInclude Include="src\GLCore\Util\GLAbstract\IndexBuffer.h" />
     <ClInclude Include="src\GLCore\Util\GLAbstract\Renderer.h" />
     <ClInclude Include="src\GLCore\Util\GLAbstract\Shader.h" />
@@ -136,8 +137,9 @@
     <ClInclude Include="src\GLCoreUtils.h" />
     <ClInclude Include="src\GLCore\Util\Model\Mesh.h" />
     <ClInclude Include="src\GLCore\Util\Model\Model.h" />
-    <ClInclude Include="src\GLCore\Util\Model\ObjLoader.h" />
+    <ClInclude Include="src\GLCore\Util\Model\glTFLoader.h" />
     <ClInclude Include="src\GLCore\Util\OpenGLDebug.h" />
+    <ClInclude Include="src\GLCore\Util\Transform.hpp" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\glpch.h" />
@@ -509,6 +511,7 @@
     <ClInclude Include="vendor\glm\glm\vec3.hpp" />
     <ClInclude Include="vendor\glm\glm\vec4.hpp" />
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
+    <ClInclude Include="vendor\json\json.hpp" />
     <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
@@ -530,9 +533,9 @@
     <ClCompile Include="src\GLCore\Util\GLAbstract\Texture.cpp" />
     <ClCompile Include="src\GLCore\Util\GLAbstract\VertexArray.cpp" />
     <ClCompile Include="src\GLCore\Util\GLAbstract\VertexBuffer.cpp" />
+    <ClCompile Include="src\GLCore\Util\Model\glTFLoader.cpp" />
     <ClCompile Include="src\GLCore\Util\Model\Mesh.cpp" />
     <ClCompile Include="src\GLCore\Util\Model\Model.cpp" />
-    <ClCompile Include="src\GLCore\Util\Model\ObjLoader.cpp" />
     <ClCompile Include="src\GLCore\Util\OpenGLDebug.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
