--- a/OpenGL-Core/OpenGL-Core.vcxproj.filters
+++ b/OpenGL-Core/OpenGL-Core.vcxproj.filters
@@ -1269,7 +1269,10 @@
     <ClInclude Include="src\GLCore\Util\OpenGLDebug.h" />
     <ClInclude Include="src\GLCore\Util\Model\Mesh.h" />
     <ClInclude Include="src\GLCore\Util\Model\Model.h" />
-    <ClInclude Include="src\GLCore\Util\Model\ObjLoader.h" />
+    <ClInclude Include="src\GLCore\Util\Model\glTFLoader.h" />
+    <ClInclude Include="vendor\json\json.hpp" />
+    <ClInclude Include="src\GLCore\Util\Transform.hpp" />
+    <ClInclude Include="src\GLCore\Util\Common\File.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\GLCore\Core\Application.cpp">
@@ -1341,6 +1344,6 @@
     <ClCompile Include="src\GLCore\Util\OpenGLDebug.cpp" />
     <ClCompile Include="src\GLCore\Util\Model\Mesh.cpp" />
     <ClCompile Include="src\GLCore\Util\Model\Model.cpp" />
-    <ClCompile Include="src\GLCore\Util\Model\ObjLoader.cpp" />
+    <ClCompile Include="src\GLCore\Util\Model\glTFLoader.cpp" />
   </ItemGroup>
 </Project>
