--- a/OpenGL-Core/OpenGL-Core.vcxproj.filters
+++ b/OpenGL-Core/OpenGL-Core.vcxproj.filters
@@ -1273,6 +1273,7 @@
     <ClInclude Include="vendor\json\json.hpp" />
     <ClInclude Include="src\GLCore\Util\Transform.hpp" />
     <ClInclude Include="src\GLCore\Util\Common\File.hpp" />
+    <ClInclude Include="src\GLCore\Util\Light\Light.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\GLCore\Core\Application.cpp">
