--- a/OpenGL-Core/OpenGL-Core.vcxproj.filters
+++ b/OpenGL-Core/OpenGL-Core.vcxproj.filters
@@ -1347,5 +1347,6 @@
     <ClCompile Include="src\GLCore\Util\Model\Mesh.cpp" />
     <ClCompile Include="src\GLCore\Util\Model\Model.cpp" />
     <ClCompile Include="src\GLCore\Util\Model\glTFLoader.cpp" />
+    <ClCompile Include="src\GLCore\Util\Model\Material.cpp" />
   </ItemGroup>
 </Project>
