wrappingup, starting depthMap

--- a/OpenGL-Core/OpenGL-Core.vcxproj
+++ b/OpenGL-Core/OpenGL-Core.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="src\GLCore\Util\Camera\PerspectiveCamera.h" />
     <ClInclude Include="src\GLCore\Util\Camera\PerspectiveCameraController.h" />
     <ClInclude Include="src\GLCore\Util\Common\File.hpp" />
+    <ClInclude Include="src\GLCore\Util\Common\MonoSingleton.hpp" />
     <ClInclude Include="src\GLCore\Util\GLAbstract\IndexBuffer.h" />
     <ClInclude Include="src\GLCore\Util\GLAbstract\Renderer.h" />
     <ClInclude Include="src\GLCore\Util\GLAbstract\Shader.h" />
