--- a/OpenGL-Sandbox/OpenGL-Sandbox.vcxproj
+++ b/OpenGL-Sandbox/OpenGL-Sandbox.vcxproj
@@ -103,6 +103,7 @@
     <ClInclude Include="src\BatchRenderTest\BatchRenderTest.h" />
     <ClInclude Include="src\ClearColorTest\ClearColorTest.h" />
     <ClInclude Include="src\CubeTest\CubeTest.h" />
+    <ClInclude Include="src\DepthTest\DepthTest.h" />
     <ClInclude Include="src\MatTest\MatTest.h" />
     <ClInclude Include="src\ModelTest\ModelTest.h" />
     <ClInclude Include="src\TestMenu\TestMenu.h" />
@@ -112,6 +113,7 @@
     <ClCompile Include="src\BatchRenderTest\BatchRenderTest.cpp" />
     <ClCompile Include="src\ClearColorTest\ClearColorTest.cpp" />
     <ClCompile Include="src\CubeTest\CubeTest.cpp" />
+    <ClCompile Include="src\DepthTest\DepthTest.cpp" />
     <ClCompile Include="src\MatTest\MatTest.cpp" />
     <ClCompile Include="src\ModelTest\ModelTest.cpp" />
     <ClCompile Include="src\RenderEngine.cpp" />
@@ -124,6 +126,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="assets\shaders\depth_frag.glsl" />
     <None Include="assets\shaders\model_loading_frag.glsl" />
     <None Include="assets\shaders\model_loading_vert.glsl" />
     <None Include="assets\shaders\pbr_frag.glsl" />
