--- a/OpenGL-Sandbox/OpenGL-Sandbox.vcxproj
+++ b/OpenGL-Sandbox/OpenGL-Sandbox.vcxproj
@@ -106,6 +106,7 @@
     <ClInclude Include="src\DepthTest\DepthTest.h" />
     <ClInclude Include="src\MatTest\MatTest.h" />
     <ClInclude Include="src\ModelTest\ModelTest.h" />
+    <ClInclude Include="src\StencilTest\StencilTest.h" />
     <ClInclude Include="src\TestMenu\TestMenu.h" />
     <ClInclude Include="src\TextureTest\Texture2DTest.h" />
   </ItemGroup>
@@ -117,6 +118,7 @@
     <ClCompile Include="src\MatTest\MatTest.cpp" />
     <ClCompile Include="src\ModelTest\ModelTest.cpp" />
     <ClCompile Include="src\RenderEngine.cpp" />
+    <ClCompile Include="src\StencilTest\StencilTest.cpp" />
     <ClCompile Include="src\TestMenu\TestMenu.cpp" />
     <ClCompile Include="src\TextureTest\Texture2DTest.cpp" />
   </ItemGroup>
@@ -129,6 +131,7 @@
     <None Include="assets\shaders\depth_frag.glsl" />
     <None Include="assets\shaders\model_loading_frag.glsl" />
     <None Include="assets\shaders\model_loading_vert.glsl" />
+    <None Include="assets\shaders\outline_frag.glsl" />
     <None Include="assets\shaders\pbr_frag.glsl" />
     <None Include="assets\shaders\test.frag.glsl" />
     <None Include="assets\shaders\test.vert.glsl" />
