--- a/OpenGL-Core/OpenGL-Core.vcxproj
+++ b/OpenGL-Core/OpenGL-Core.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="src\GLCore\Util\Model\Model.h" />
     <ClInclude Include="src\GLCore\Util\Model\glTFLoader.h" />
     <ClInclude Include="src\GLCore\Util\OpenGLDebug.h" />
+    <ClInclude Include="src\GLCore\Util\RTX\RTXCommon.hpp" />
     <ClInclude Include="src\GLCore\Util\Transform.hpp" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
